--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,7 @@ body {
   border: none;
   border-radius: 16px;
   font-weight: 600;
+  cursor: pointer;
 }
 
 .secondary-btn {
@@ -28,6 +29,7 @@ body {
   padding: 10px 20px;
   border-radius: 16px;
   font-weight: 600;
+  cursor: pointer;
 }
 h1, h2, h3, h4, h5, h6, p {
   color: white;
