--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,9 +17,10 @@ body {
   padding: 10px 20px;
   background-color: white;
   border: none;
-  border-radius: 16px;
+  border-radius: 8px;
   font-weight: 600;
   cursor: pointer;
+  font-size: 1rem;
 }
 
 .secondary-btn {
@@ -27,9 +28,10 @@ body {
   border: 2px solid white;
   color: white;
   padding: 10px 20px;
-  border-radius: 16px;
+  border-radius: 8px;
   font-weight: 600;
   cursor: pointer;
+  font-size: 1rem;
 }
 h1, h2, h3, h4, h5, h6, p {
   color: white;
