Added changes to header and buttons

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,10 @@
 .appHeader {
     padding: 20px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    max-width: 1200px;
+    justify-content: space-between;
+    margin: 0 auto;
 }
 .secondPart {
     display: flex;
