--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -4,7 +4,7 @@
     padding: 50px 20px;
 }
 .hero h1 {
-    font-size: 2.5rem;
+    font-size: 3rem;
     margin-bottom: 20px;
     max-width: 800px;
     text-wrap: balance;
@@ -29,5 +29,8 @@
         align-items: center;
         flex-direction: column;
         text-align: center;
+        max-width: 1268px;
+        border-radius: 16px;
+        margin: 0 auto;
     }
 }
