--- a/src/components/Features/Features.module.css
+++ b/src/components/Features/Features.module.css
@@ -16,14 +16,10 @@
 }
 .featureSingle {
     padding: 20px;
-    border: 1px solid rgb(39, 38, 38);
+    border: none;
     border-radius: 16px;
     background-color: rgb(11, 11, 11);
-    transition: 0.2s ease-in-out;
     cursor: pointer;
-}
-.featureSingle:hover {
-    border-color: gray;
 }
 .featureSingle h3 {
     margin-bottom: 10px;
