Added hero gradient, edited features title section

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,5 +1,5 @@
 .hero {
-    background-color: #ab0055;
+    background: linear-gradient(#ab0055, #4b0025);
     min-height: 600px;
     padding: 50px 20px;
 }
