--- a/src/components/CTA/CTA.module.css
+++ b/src/components/CTA/CTA.module.css
@@ -3,7 +3,7 @@
     margin: 50px auto;
     background: linear-gradient(#ab0055, #4f0128);
     padding: 150px 20px;
-    border-radius: 16px;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,4 +14,9 @@
     text-wrap: balance;
     margin-bottom: 20px;
     text-align: center;
+}
+@media (min-width: 1268px) {
+    .CTA {
+        border-radius: 16px;
+    }
 }
