--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,12 @@ body {
   border-radius: 8px;
   cursor: pointer;
   font-size: 1rem;
+  text-decoration: none;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
 .secondary-btn {
@@ -30,6 +36,10 @@ body {
   border-radius: 8px;
   cursor: pointer;
   font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 h1, h2, h3, h4, h5, h6, p {
   color: white;
