--- a/src/app/login/Login.module.css
+++ b/src/app/login/Login.module.css
@@ -5,11 +5,13 @@
     height: 100vh;
 }
 .Login h1 {
-    margin-bottom: 20px;
-    text-align: center;
+    margin: 20px 0px;
 }
 .Login form {
     max-width: 400px;
+}
+.Login > img {
+    display: flex;
 }
 .Login form input {
     width: 100%;
