--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 10px;
+  text-decoration: none;
 }
 h1, h2, h3, h4, h5, h6, p {
   color: white;
