--- a/src/components/FilterSidebar/filtersidebar.module.css
+++ b/src/components/FilterSidebar/filtersidebar.module.css
@@ -1,5 +1,5 @@
 .filterSidebarContainer {
-    margin-top: 20px;
+    margin: 16px 0px;
     display: flex;
     gap: 5px;
 }
@@ -7,7 +7,7 @@
     background-color: #2a2a2a;
     padding: 8px 15px;
     border-radius: 20px;
-    color: #dfdfdf;
+    color: #ffffff;
     border: none;
     cursor: pointer;
     transition: 0.2s ease-in-out;
